--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <div>
-    <form id="Car" action="Lab/Car" method="POST" >
+    <form id="Car" action="LabCar" method="POST" >
         <label for="Gears">How many gears do you want your car to have?</label>
         <input name="Gears" id="Gears" >
         <label for="Speed">What do you want the top speed of your car to be?</label>
