--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
 <body>
 <h1>Aditya's Inheritance Mini Lab</h1>
 <ul>
-    <li><a href="Inheritance">Inheritance Lab</a></li>
+    <li><a href="inheritance">Inheritance Lab</a></li>
 </ul>
 
 </body>
