Added a background color.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <title>Home Page of Inheritance Lab</title>
 </head>
+
+<body bgcolor="#20BCE3"></body>
+
 <body>
 <h1>Aditya's Inheritance Mini Lab</h1>
 <ul>
     <li><a href="inheritance">Inheritance Lab</a></li>
 </ul>
-
 </body>
 </html>
