--- a/src/main/resources/templates/inheritance.html
+++ b/src/main/resources/templates/inheritance.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <title>Aditya's Inheritance Lab</title>
 </head>
+
+<body bgcolor="#20BCE3"></body>
+
 <body>
 <div class="lab">
     <h1>Inheritance Lab - Literature</h1>
